include_directories(common)

add_subdirectory(common)
add_subdirectory(memcached)
if (ENABLE_MASSTREE)
    add_subdirectory(masstree)
else()
    message(STATUS "Skipping masstree (ENABLE_MASSTREE=OFF)")
endif()
if (ENABLE_PHOENIX)
    add_subdirectory(phoenix)
else()
    message(STATUS "Skipping phoenix (ENABLE_PHOENIX=OFF)")
endif()
